2024-06-05 Jan Kotanski <jankotan@gmail.com>
	* add eigerdectrismesh template (#647)
	* tagged as v4.3.0

2024-06-05 Jan Kotanski <jankotan@gmail.com>
	* reingest scan metadata if it is repeated with the same ScanID (#647)
	* tagged as v4.2.1

2024-06-03 Jan Kotanski <jankotan@gmail.com>
	* adapt append_scicat_dataset to _%05d and _{ScanID:05d} formatting (#643)
	* tagged as v4.2.0

2024-05-23 Jan Kotanski <jankotan@gmail.com>
	* replace deprecated tz.localize() with datetime.replace() (#640)
	* tagged as v4.1.1

2024-05-22 Jan Kotanski <jankotan@gmail.com>
	* adapt the entry name in the appendentry mode to NXS_FileRecorder v3.21.0 (#637)
	* tagged as v4.1.0

2024-05-15 Jan Kotanski <jankotan@gmail.com>
	* reduce number of plots in h5redis writer (#635)
	* tagged as v4.0.2

2024-05-12 Jan Kotanski <jankotan@gmail.com>
	* add finish for h5redis writer
	* tagged as v4.0.1

024-05-10 Jan Kotanski <jankotan@gmail.com>
	* add support for h5redis writer
	* drop support for python2
	* tagged as v4.0.0

2024-03-27 Jan Kotanski <jankotan@gmail.com>
	* add nxsetup wait subcommand (#624)
	* add --timeout -no-wait for  nonxsetup subcommands (#624)
	* extend nxsetup set to create a general device (#624)
	* tagged as v3.67.0

2024-03-22 Jan Kotanski <jankotan@gmail.com>
	* add --confiserver option to nxsetup set
	* tagged as v3.66.0

2024-03-14 Jan Kotanski <jankotan@gmail.com>
	* increase waiting time for restarting servers (#618)
	* tagged as v3.65.1

2024-02-22 Jan Kotanski <jankotan@gmail.com>
	* spilt NXsample to sample and sample_environment like for SECoP components (#615)
	* remove --strict and  --node-in-instrument (#615)
	* add --sample-environment (#615)
	* tagged as v3.65.0

2024-02-19 Jan Kotanski <jankotan@gmail.com>
	* store importance as a measurement attribute (#608)
	* add dynamic secop helper links (#610)
	* add sample nxdata from secop (#612)
	* tagged as v3.64.0

2024-02-09 Jan Kotanski <jankotan@gmail.com>
	* add techniques only with the pid (#605)