@@ -1,0 +1,42 @@
+<?xml version='1.0'?>
+<definition>
+  <group type="NXentry" name="$var.entryname#'$(__entryname__)'$var.serialno">
+    <group type="NXinstrument" name="$(__insname__)">
+      <group type="NXdetector" name="$(name)">
+        <field units="um" type="NX_FLOAT64" name="x_pixel_size">75</field>
+        <field units="um" type="NX_FLOAT64" name="y_pixel_size">75</field>
+        <field type="NX_CHAR" name="layout">area</field>
+        <field type="NX_CHAR" name="description">$datasources.$(name)_description_cb<strategy mode="INIT"/>
+        </field>
+        <field type="NX_INT" name="bit_depth_readout">$datasources.$(name)_bitdepth<strategy mode="FINAL"/>
+        </field>
+        <field units="s" type="NX_FLOAT64" name="detector_readout_time">$datasources.$(name)_readouttime<strategy mode="FINAL"/>
+        </field>
+        <field units="s" type="NX_FLOAT64" name="count_time">$datasources.$(name)_counttime<strategy mode="STEP"/>
+        </field>
+        <field units="s" type="NX_FLOAT64" name="frame_time">$datasources.$(name)_frametime<strategy mode="STEP"/>
+        </field>
+        <field units="eV" type="NX_FLOAT64" name="threshold_energy">$datasources.$(name)_energythreshold<strategy mode="FINAL"/>
+        </field>
+        <field type="NX_BOOLEAN" name="flatfield_applied">$datasources.$(name)_flatfieldenabled<strategy mode="FINAL"/>
+        </field>
+        <field type="NX_BOOLEAN" name="countrate_correction_applied">$datasources.$(name)_ratecorrectionenabled<strategy mode="FINAL"/>
+        </field>
+        <group type="NXcollection" name="collection">
+          <field type="NX_UINT64" name="nb_images">
+            <strategy mode="STEP"/>$datasources.$(name)_nbimages</field>
+          <field type="NX_UINT64" name="nb_triggers">
+            <strategy mode="FINAL"/>$datasources.$(name)_nbtriggers</field>
+          <field type="NX_CHAR" name="triggermode">
+            <strategy mode="FINAL"/>$datasources.$(name)_triggermode_cb</field>
+          <field type="NX_UINT64" name="stepindex">
+            <strategy mode="STEP"/>$datasources.$(name)_stepindex</field>
+          <field type="NX_BOOLEAN" name="auto_summation_applied">$datasources.$(name)_autosummationenabled<strategy mode="FINAL"/>
+          </field>
+        </group>
+      </group>
+    </group>
+    <group type="NXdata" name="data">
+    </group>
+  </group>
+</definition>
