@@ -1,0 +1,11 @@
+<?xml version='1.0'?>
+<definition>
+  <datasource type="PYEVAL" name="$(name)_stepindex">
+    <result name="result">
+from nxstools.pyeval import common
+ds.result = common.blockitem_addint(commonblock, "$(name)_stepindex", ds.$(name)_nbimages)
+ds.result = len(commonblock["$(name)_stepindex"])
+    </result>
+    $datasources.$(name)_nbimages
+  </datasource>
+</definition>
