@@ -1,0 +1,11 @@
+<?xml version='1.0'?>
+<definition>
+  <datasource type="PYEVAL" name="$(name)_triggermode_cb">
+    <result name="result">
+from nxstools.pyeval import eigerdectris      
+ds.result = eigerdectris.triggermode_cb(commonblock, "$(name)", ds.$(name)_triggermode, ds.$(name)_nbimages, "$(hostname)", "$(device)", "$var.filename", "$(name)_stepindex", "$var.entryname#'$(__entryname__)'$var.serialno", "$(__insname__)", "EigerDectris", "EigerFilewriter", True, [3269, 3110], "uint32", "$var.acq_modes")
+    </result>
+    $datasources.$(name)_triggermode
+    $datasources.$(name)_nbimages
+  </datasource>
+</definition>
