@@ -3,7 +3,7 @@
   <datasource type="PYEVAL" name="$(name)_description">
     <result name="result">
 from nxstools.pyeval import common
-common.blockitem_rm(commonblock, ["$(name)_stepindex""])
+common.blockitem_rm(commonblock, ["$(name)_stepindex"])
 ds.result = ds.$(name)_description
 </result>
   $datasources.$(name)_description
