@@ -1,5 +1,6 @@
 2024-06-05 Jan Kotanski <jankotan@gmail.com>
-	* add eigerdectrismesh template (#647)
+	* add eigerdectrismesh template (#649)
+	* add eiger9m32vds template (#652)
 	* tagged as v4.3.0
 
 2024-06-05 Jan Kotanski <jankotan@gmail.com>
